@@ -87,9 +87,7 @@ try {
         }
 
     }
-}catch (Exception $e) {
-    header("HTTP/1.0 500");
-    echo $e -> getMessage().' ('.$e -> getCode().')';
-    exit;
+} catch (Exception $e) {
+ handleAjaxExceptions($e);
 }
 ?>
